RESOLVED FIXED226129
Fix locking issue for AudioDestinationCocoa::m_isPlaying
https://bugs.webkit.org/show_bug.cgi?id=226129
Summary Fix locking issue for AudioDestinationCocoa::m_isPlaying
Chris Dumez
Reported 2021-05-21 18:14:32 PDT
Fix locking issue for AudioDestinationCocoa::m_isPlaying. The AudioDestinationCocoa::isPlaying() getter fails to lock. isPlaying() may get called from the main thread and the audio rendering thread.
Attachments
Patch (2.89 KB, patch)
2021-05-21 18:18 PDT, Chris Dumez
no flags
Patch (2.89 KB, patch)
2021-05-21 20:14 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-05-21 18:18:29 PDT
Chris Dumez
Comment 2 2021-05-21 20:14:10 PDT
EWS
Comment 3 2021-05-21 21:24:32 PDT
Committed r277910 (238043@main): <https://commits.webkit.org/238043@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429394 [details].
Radar WebKit Bug Importer
Comment 4 2021-05-21 21:25:20 PDT
Note You need to log in before you can comment on or make changes to this bug.