Fix locking issue for AudioDestinationCocoa::m_isPlaying https://bugs.webkit.org/show_bug.cgi?id=226129

Reviewed by Jer Noble.

Fix locking issue for AudioDestinationCocoa::m_isPlaying. The AudioDestinationCocoa::isPlaying()
getter fails to lock. isPlaying() may get called from the main thread and the audio rendering
thread. Since we cannot grab a lock on the rendering thread, use std::atomic<bool> type for
m_isPlaying.

* platform/audio/cocoa/AudioDestinationCocoa.cpp:
(WebCore::AudioDestinationCocoa::setIsPlaying):
(WebCore::AudioDestinationCocoa::renderOnRenderingTheadIfPlaying):
* platform/audio/cocoa/AudioDestinationCocoa.h:


Canonical link: https://commits.webkit.org/238043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277910 268f45cc-cd09-0410-ab3c-d52691b4dbfc